Upgrade to Java 17 with enable preview on, only upgrade the toolchain in Gradle not the Gradle runtime.  Starting to get Groovy warnings